--- a/TP2/EntregaFinal/css/style.css
+++ b/TP2/EntregaFinal/css/style.css
@@ -3,9 +3,9 @@
 :root {
     --shadow-primary: #622D6B;
     --shadow-secundary: #7B4386;
-    --primary-color: #9852A4;
+    --primary-color: #9852a4d5;
     --ligth-primary: #B371C1;
-    --ligth-primary-2: #D199E1;
+    --ligth-primary-2: #d6a4e4;
 
     --black-background-: #070606;
     --dark-gray: #333;
@@ -72,28 +72,20 @@ body{
     .nabvar-hamburguesa {
         width: 5%;
         height: 3rem;
-        padding: 20px 20px 0px 20px;
+        padding-top: 22px; /* Espacio arriba */
+        padding-left: 28px; /* Espacio a la izquierda */
         cursor: pointer;
-
-
-        .nav-link-hamb {
-
-            .nav-img-hamburguesa {
-                width: 25px;
-                height: 40px;
-            }
-        }
     }
 
     .navbar-contenedor-logo {
-        width: 10%;
-        height: 40px;
+        width: 9%;
         display: flex;
-        margin-right: 5%;
+        align-items: center;
+
 
         .navbar-logo-img {
             width: 100%;
-
+            margin-top: 9px;
             .navbar-logo {
                 border: 2px solid wheat;
                 border-radius: 10px;
@@ -102,6 +94,8 @@ body{
 
         .navbar-title {
             color: white;
+            line-height: 90%;
+            margin-left: 7px;
         }
     }
 
@@ -111,8 +105,9 @@ body{
         border-radius: 30px;
         height: 40px;
         width: 28%;
-        margin-right: 5%;
-        /* Buscar otra forma de espaciar */
+        margin-right: 20%;
+        margin-left: 15%;
+        justify-content: center;
         display: flex;
 
         .nav-div-input {
@@ -131,132 +126,38 @@ body{
             margin-left: 10px;
         }
     }
-/*
-    .conteiner-user {
-        margin-right: 2%;
-        margin-left: 10%;
-        width: 130px;
-          
-        .btn-sesion {
-           padding: 5px 5px;
-           text-transform: uppercase;
-            border-radius: 80px;
-            font-size: var(--h3);
-            color: var(--white);
-            background: var(--primary-color);
-            cursor: pointer;
-            box-shadow: transparent;
-            border: 1px solid var(--primary-color);
-            transition: 0.5s ease;
-            user-select: none;
-            width: 130px;
-            height: 40px;
-          }
-          
-          #btn-sesion:hover,
-          :focus {
-            color: var(--white);
-            background: var(--primary-color);
-            border: 0.5px solid var(--primary-color);
-            text-shadow: 0 0 0.5px var(--white), 0 0 1px var(--white), 0 0 2.5px var(--white);
-            box-shadow: 0 0 1px var(--primary-color), 0 0 2.5px var(--primary-color), 0 0 2px var(--primary-color),
-              0 0 20px var(--ligth-primary);
-          }
-          
-    }
-          */
-           
-    .pushable {
+
+    .btn {
         position: relative;
-        background: transparent;
-        margin-right: 10px;
-        width: 130px;
-    height: 40px;
-        padding: 0px;
-        border: none;
+        display: inline-block;
+        margin: 15px;
+        padding: 10px 15px;
+        text-align: center;
+        font-size: 18px;
+        letter-spacing: 1px;
+        text-decoration: none;
+        color: var(--white);
+        background: var(--primary-color);
         cursor: pointer;
-        outline-offset: 4px;
-        outline-color: deeppink;
-        transition: filter 250ms;
-        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    }
-    
-    .shadow {
-        position: absolute;
-        top: 0;
-        left: 0;
-        height: 100%;
-        width: 100%;
-        background: hsl(226, 25%, 69%);
-        border-radius: 8px;
-        filter: blur(2px);
-        will-change: transform;
-        transform: translateY(2px);
-        transition: transform 600ms cubic-bezier(0.3, 0.7, 0.4, 1);
-    }
-    
-    .edge {
-        position: absolute;
-        top: 0;
-        left: 0;
-        height: 100%;
-        width: 100%;
-        border-radius: 8px;
-        background: linear-gradient(
-        to right,
-        hsl(248, 39%, 39%) 0%,
-        hsl(248, 39%, 49%) 8%,
-        hsl(248, 39%, 39%) 92%,
-        hsl(248, 39%, 29%) 100%
-        );
-    }
-    
-    .front {
-        display: flex;
-        width: 130px;
-        height: 40px;
-        padding: 0; /* elimina el padding para que el tamaño sea exacto */
-        position: relative;
-        border-radius: 8px;
-        background: hsl(248, 53%, 58%);
-        padding: 16px 32px;
-        color: white;
-        font-weight: 600;
-        text-transform: uppercase;
-        letter-spacing: 1.5px;
-        font-size: 1rem;
-        transform: translateY(-4px);
-        transition: transform 600ms cubic-bezier(0.3, 0.7, 0.4, 1);
-    }
-    
-    .pushable:hover {
-        filter: brightness(110%);
-    }
-    
-    .pushable:hover .front {
-        transform: translateY(-6px);
-        transition: transform 250ms cubic-bezier(0.3, 0.7, 0.4, 1.5);
-    }
-    
-    .pushable:active .front {
-        transform: translateY(-2px);
-        transition: transform 34ms;
-    }
-    
-    .pushable:hover .shadow {
-        transform: translateY(4px);
-        transition: transform 250ms cubic-bezier(0.3, 0.7, 0.4, 1.5);
-    }
-    
-    .pushable:active .shadow {
-        transform: translateY(1px);
-        transition: transform 34ms;
-    }
-    
-    .pushable:focus:not(:focus-visible) {
-        outline: none;
-    }
-    
+        transition: ease-out 0.3s;
+        border: 0.1px solid var(--white);
+        border-radius: 80px;
+        box-shadow: inset 0 0 0 0 var(--ligth-primary-2);
+      }
+      
+      .btn:hover {
+        color: var(--primary-color);
+        background-color: transparent;
+        border-color: var(--primary-color) 1px;
+        box-shadow: inset 0 -100px 0 0 transparent;
+        
+      }
+      
+      .btn:active {
+        transform: scale(0.9);
+      }
+           
+ 
 }
 
 /* ---------------------------Main--------------------- */
