--- a/TP2/EntregaFinal/css/style.css
+++ b/TP2/EntregaFinal/css/style.css
@@ -54,7 +54,6 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: fixed;
     top: 0;
     z-index: 4;
     padding: 0px;
@@ -164,7 +163,7 @@ body{
 .galery-game {
     background-color: var(--dark-gray);
     position: relative;
-    margin-top: 35px;
+    margin-top: 4px;
     
     .vertical-nav-wrapper {
         position: fixed;
@@ -249,9 +248,10 @@ body{
                 color: var(--white);
                 border-top-left-radius: 8px;
                 border-bottom-right-radius: 8px;
-                bottom: 8px;
+                bottom: 10px;
                 padding-top: 5px;
                 right: 0px;
+                cursor: pointer;
                 background-color: var(--black-background-);
             }
 
@@ -294,26 +294,27 @@ body{
 
                 :is(.a, .b, .c, .d)::before {
                     content: "Jugar gratis";
-                    width: 80%;
+                    width: 70%;
                     text-align: center;
                     color: white;
                     position: absolute;
                     background-color: var(--black-background-);
-                    left: 20%;
-                    height: 25px;
-                    bottom: 9px;
-                    border-radius: 8px;
+                    right: 8px;
+                    height: 36px;
+                    bottom: 10px;
+                    border-top-left-radius: 8px;
+                    border-bottom-right-radius: 8px;
                 }
 
                 .cardSmall-game {
                     position: relative;
-                    
 
                     .card-img-game-small {
                         object-fit: cover;
                         width: 200px;
                         height: 108px;
                         cursor: pointer;
+                        margin-right: 10px;
                     }
                 }
             }
@@ -369,7 +370,7 @@ body{
         z-index: 1000;
         justify-content: center;
         align-items: center;
-        background-color: #07060600;
+        background-color: var(--black-background-);
         border: none;
     }
 
@@ -457,6 +458,7 @@ body{
         width: 40px;
         height: 40px;
         margin: 0 10px;
+        border-radius: 12%;
     }
 
     .register {
@@ -479,13 +481,26 @@ body{
         padding: 0;
         width: 100%;
         height: 100%;
-        backdrop-filter: blur(2px);
+        backdrop-filter: blur(3px);
         background-color: transparent;
        
     }
 
     .login-box {
         height: 100%;
+        margin: 2% auto;
+        background-color: var(--black-background-);
+        padding: 35px;
+        border-radius: 12px;
+        box-shadow: var(--black-background-);
+        width: 400px;
+        max-width: 100%;
+        text-align: center;
+        border-radius: 50px;
+    }
+
+    .login-box2 {
+        height: 700px;
         margin: 2% auto;
         background-color: var(--black-background-);
         padding: 35px;
@@ -510,6 +525,7 @@ body{
         border-radius: 75px; 
         border: none;
         font-size: 16px;
+        color: var(--blackish);
     }
 
     .btn-primary {
@@ -542,6 +558,7 @@ body{
         width: 40px;
         height: 40px;
         margin: 0 10px;
+        border-radius: 15%;
     }
 
     .register {
