--- a/TP2/EntregaFinal/css/style.css
+++ b/TP2/EntregaFinal/css/style.css
@@ -130,7 +130,7 @@ body{
         position: relative;
         display: inline-block;
         margin: 15px;
-        padding: 10px 15px;
+        padding: 5px 15px;
         text-align: center;
         font-size: 18px;
         letter-spacing: 1px;
@@ -141,6 +141,7 @@ body{
         transition: ease-out 0.3s;
         border: 0.1px solid var(--white);
         border-radius: 80px;
+        font-size: var(--h2);
         box-shadow: inset 0 0 0 0 var(--ligth-primary-2);
       }
       
@@ -487,7 +488,7 @@ body{
     }
 
     .login-box {
-        height: 100%;
+        height: 105vh;
         margin: 2% auto;
         background-color: var(--black-background-);
         padding: 35px;
@@ -498,6 +499,86 @@ body{
         text-align: center;
         border-radius: 50px;
     }
+
+    .button-close {
+        position: relative;
+        width: 2.5em;
+        height: 2.5em;
+        border: none;
+        background: rgba(180, 83, 107, 0.11);
+        border-radius: 5px;
+        transition: background 0.5s;
+    }
+    
+    .X {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 2em;
+        height: 1.5px;
+        background-color: rgb(255, 255, 255);
+        transform: translateX(-50%) rotate(45deg);
+    }
+    
+    .Y {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 2em;
+        height: 1.5px;
+        background-color: #fff;
+        transform: translateX(-50%) rotate(-45deg);
+    }
+    
+    .close {
+        position: absolute;
+        display: flex;
+        padding: 0.8rem 1.5rem;
+        align-items: center;
+        justify-content: center;
+        transform: translateX(-50%);
+        top: -70%;
+        left: 50%;
+        width: 3em;
+        height: 1.7em;
+        font-size: 12px;
+        background-color: rgb(19, 22, 24);
+        color: rgb(187, 229, 236);
+        border: none;
+        border-radius: 3px;
+        pointer-events: none;
+        opacity: 0;
+    }
+    
+    .button-close:hover {
+        background-color: rgb(211, 21, 21);
+    }
+    
+    .button-close:active {
+        background-color: rgb(130, 0, 0);
+    }
+    
+    .button-close:hover > .close {
+        animation: close 0.2s forwards 0.25s;
+    }
+    
+    @keyframes close {
+        100% {
+        opacity: 1;
+        }
+    }
+
+    .close-tittle {
+        display: flex;
+        justify-content: center;
+        align-items: center; /* Alinea verticalmente el texto y el botón */
+        position: relative; /* Para que el botón se posicione correctamente */
+        margin-bottom: 20px; /* Espacio entre el título y el resto del formulario */
+        width: 340px;
+    }
+  
 
     .login-box2 {
         height: 700px;
