--- a/TP2/EntregaFinal/css/style.css
+++ b/TP2/EntregaFinal/css/style.css
@@ -39,6 +39,9 @@ body{
     margin: 0; 
     background-color: var(--dark-gray);
 }
+h1,h2,h3,h4{
+    font-weight: 100;
+}
 
 /* -------------------------Header--------------------- */
 .navbar {
@@ -48,7 +51,7 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: fixed;
+    position: sticky;
     top: 0;
     z-index: 4;
 
@@ -756,6 +759,7 @@ footer {
     background-color: var(--dark-gray);
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 .game-content{
     position: relative;
@@ -783,7 +787,7 @@ footer {
         top: 40%;
         left: 40%;
         text-align: center;
-        z-index: 10;
+        z-index: 1;
         color: var(--white);
     }
 
@@ -803,12 +807,11 @@ footer {
     background-color: var(--dark-shddow);
     display: flex;
     justify-content: space-between;
-    width: 80%;
+    width: 85%;
     align-items: center;
     border-radius: 8px;
     margin-top: 0;
     color: var(--white);  
-    margin-left: 8.5rem;  
 
     .logo-pag{
         margin-top: 0.5rem;
@@ -836,6 +839,7 @@ footer {
         transition: transform 0.2s ease-in-out, background-color 0.3s ease;
         display: flex;
         align-items: center;
+        cursor: pointer;
     }
 
     .btn-feedback span{
@@ -850,6 +854,12 @@ footer {
 
 }
 
+.breadcrumb-container{
+    align-self: flex-start;
+    margin-left: 8%;
+    position: relative;
+}
+
 .breadcrumb {
     display: flex;
     flex-direction: row;
@@ -858,7 +868,7 @@ footer {
     padding: 10px 0;
     font-size: 14px;
     color: var(--white);
-    margin-left: 8.6rem;
+    align-self: flex-start;
   }
 
   .breadcrumb a {
@@ -873,3 +883,76 @@ footer {
     transform: translateY(-1px);
 
   }
+  .screen-game-complete{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+  .game-info-container{
+    background-color: var(--dark-shddow);
+    border-radius:8px;
+    margin-top: 25px;
+    width: 85%;
+    padding: 1rem;
+    color: var(--white);
+    
+}
+
+
+  .game-info-container ul{
+    list-style: none;
+}
+
+
+  .game-images-playing{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-top: 1rem;
+}
+
+  .game-images{
+    margin-top: 1rem;
+  }
+  
+  .img-controls{
+    width: 3.25rem;
+    height: auto;
+  }
+
+  .img-controls-move{
+    width: 4.5rem;
+  }
+
+  .game-controls{
+    display: flex;
+    align-items: center;
+    margin-top: 0.5rem;
+    margin-bottom: 3rem;
+  }
+
+  .game-controls-title{
+    margin-top: 2rem;
+  }
+
+  .games-recommended{
+    color: var(--white);
+    margin-top: 1rem;
+    background-color: var(--dark-shddow);
+    border-radius: 8px;
+    width: 85%;
+    overflow: hidden;
+    padding: 0.8rem;
+}
+  .games-recommended-images{
+    display: flex;
+    flex-direction: row;
+    max-width: 85%;
+  }
+
+  .game-card{
+    margin-right: 0.5rem;
+    margin-left:0.5rem
+  }
+
