--- a/TP2/EntregaFinal/css/style.css
+++ b/TP2/EntregaFinal/css/style.css
@@ -112,6 +112,7 @@ h1,h2,h3,h4{
         margin-left: 15%;
         justify-content: center;
         display: flex;
+        align-items: center;
 
         .nav-div-input {
             width: 90%;
@@ -122,11 +123,16 @@ h1,h2,h3,h4{
             width: 100%;
             height: 1.8rem;
             background-color: var(--black-background-);
-            border: 2px solid black;
+            border: none;
+            color: var(--white);
+        }
+
+        .nav-inputText:focus{
+            outline: none;
         }
 
         .nav-divLupa {
-            margin-left: 10px;
+            margin-top: 0.3rem;
         }
     }
 
