--- a/TP2/EntregaFinal/css/style.css
+++ b/TP2/EntregaFinal/css/style.css
@@ -32,25 +32,33 @@
     font-family: var(--font-baloo);
 }
 
-body{
+body {
     display: flex;
-    flex-direction: column; /* Asegura que los hijos se coloquen en una columna */
-    min-height: 100vh; /* Asegura que el cuerpo ocupe al menos el 100% de la altura de la ventana */
-    margin: 0; 
+    flex-direction: column;
+    /* Asegura que los hijos se coloquen en una columna */
+    min-height: 100vh;
+    /* Asegura que el cuerpo ocupe al menos el 100% de la altura de la ventana */
+    margin: 0;
     background-color: var(--dark-gray);
-    overflow:visible;
+    overflow: visible;
 }
-h1,h2,h3,h4{
+
+h1,
+h2,
+h3,
+h4 {
     font-weight: 100;
 }
 
 /* -------------------------Header--------------------- */
 .navbar-contenedor {
-    padding: 0 20px; /* ajusta el valor de 20px según tus necesidades */
+    padding: 0 20px;
+    /* ajusta el valor de 20px según tus necesidades */
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
+
 .navbar {
     width: 100%;
     height: 4.5rem;
@@ -68,16 +76,19 @@ h1,h2,h3,h4{
         transition: 0.5s;
 
     }
+
     .btn-hamburguesa:active {
         transform: scale(2);
         transition: 0.2s;
     }
-    
+
     .nabvar-hamburguesa {
         width: 5%;
         height: 3rem;
-        padding-top: 22px; /* Espacio arriba */
-        padding-left: 28px; /* Espacio a la izquierda */
+        padding-top: 22px;
+        /* Espacio arriba */
+        padding-left: 28px;
+        /* Espacio a la izquierda */
         cursor: pointer;
     }
 
@@ -90,6 +101,7 @@ h1,h2,h3,h4{
         .navbar-logo-img {
             width: 100%;
             margin-top: 9px;
+
             .navbar-logo {
                 border: 2px solid wheat;
                 border-radius: 10px;
@@ -137,10 +149,6 @@ h1,h2,h3,h4{
         display: inline-block;
         margin: 12px;
         padding: 5px 15px;
-        text-align: center;
-        font-size: 18px;
-        letter-spacing: 1px;
-        text-decoration: none;
         color: var(--white);
         background: var(--primary-color);
         cursor: pointer;
@@ -148,22 +156,33 @@ h1,h2,h3,h4{
         border-radius: 80px;
         font-size: var(--h2);
         box-shadow: inset 0 0 0 0 var(--ligth-primary-2);
-      }
-      
-      .btn:hover {
+
+        .icon-user {
+            display: none;
+        }
+
+        .btn span {
+            text-align: center;
+            letter-spacing: 2px;
+            font-size: var(--h3);
+            text-decoration: none;
+        }
+    }
+
+    .btn:hover {
         color: var(--primary-color);
         background-color: transparent;
         border-color: var(--primary-color) 1px;
         box-shadow: inset 0 -100px 0 0 transparent;
         border: 1px solid var(--primary-color);
-        
-      }
-      
-      .btn:active {
+
+    }
+
+    .btn:active {
         transform: scale(0.9);
-      }
-           
- 
+    }
+
+
 }
 
 /* ---------------------------Main--------------------- */
@@ -171,7 +190,7 @@ h1,h2,h3,h4{
     background-color: var(--dark-gray);
     position: relative;
     margin-top: 4px;
-    
+
     .vertical-nav-wrapper {
         position: fixed;
         width: 200px;
@@ -196,11 +215,13 @@ h1,h2,h3,h4{
                 margin: 20px auto;
                 width: 90%;
             }
+
             .link-hambur:hover {
                 background-color: var(--shadow-secundary);
                 transform: translateX(3px);
                 transition: 0.3s;
             }
+
             .link-hambur {
                 width: 200px;
                 height: 100%;
@@ -264,6 +285,7 @@ h1,h2,h3,h4{
 
             .card-game {
                 position: relative;
+
                 .card-img-game {
                     cursor: pointer;
                     width: 409px;
@@ -368,12 +390,54 @@ h1,h2,h3,h4{
 }
 
 
-/*MOBILE*/
+/*-----------------MOBILE----------*/
 @media only screen and (max-width: 414px) {
-    .login-container{
+    .btn_ini_sesion .btn {
+        padding: 2px;
+
+    }
+
+    body {
+        position: relative;
+    }
+
+    .navbar .login-container {
         position: fixed;
-        top: 45%;
-        left: 50%;
+        width: 100%;
+        height: 100%;
+        top: 50%;
+        left: 36%;
+    }
+
+    .btn_ini_sesion .btn .icon-user {
+        display: block;
+        border-radius: 20px;
+        background-color: var(--shadow-primary);
+    }
+
+    .btn span {
+        display: none;
+    }
+
+    .conteiner-lupa {
+        border: 2px solid var(--gray);
+        color: white;
+        border-radius: 30px;
+        height: 40px;
+        width: 28%;
+        margin-right: 20%;
+        margin-left: 15%;
+        justify-content: center;
+        display: none;
+    }
+
+
+    .login-container {
+        position: fixed;
+        /* top: 45%;
+        left: 50%; */
+        top: 28%;
+        left: 36%;
         transform: translate(-50%, -50%);
         z-index: 1000;
         justify-content: center;
@@ -382,14 +446,20 @@ h1,h2,h3,h4{
         border: none;
     }
 
-    .login-box{
+    .login-box {
         background-color: black;
         padding: 32px;
         border-radius: 50px;
         width: 360px;
         text-align: center;
+        margin: 2px auto;
     }
 
+    .login-box2 {
+        padding: 48px 20px;
+        width: 360px;
+        margin: auto;
+    }
 
     .sesion-text {
         color: var(--white);
@@ -401,30 +471,30 @@ h1,h2,h3,h4{
         width: 100%;
         padding: 8px;
         margin: 10px 0;
-        border-radius: 75px; 
+        border-radius: 75px;
         border: none;
         font-size: 20px;
     }
 
-    
+
     .btn-sesion {
-        width: 110px; 
+        width: 110px;
         border-style: none;
-        height: 35px; 
-        font-size: calc(var(--h3) - 2px); 
+        height: 35px;
+        font-size: calc(var(--h3) - 2px);
         padding: 4px 4px;
     }
-    
+
     #btn-sesion:hover,
     :focus {
         text-shadow: 0 0 0.8px var(--white), 0 0 0.18px var(--white), 0 0 4px var(--white);
         box-shadow: 0 0 0.16px var(--primary-color), 0 0 4px var(--primary-color), 0 0 3px var(--primary-color),
             0 0 25px var(--ligth-primary);
     }
-    
+
 
     .btn-primary {
-        background-color: var(--primary-color); 
+        background-color: var(--primary-color);
         color: white;
         padding: 10px;
         width: 60%;
@@ -437,11 +507,11 @@ h1,h2,h3,h4{
     }
 
     .btn-primary:hover {
-        background-color: var(--shadow-primary); 
-        transform: scale(1.03); 
+        background-color: var(--shadow-primary);
+        transform: scale(1.03);
     }
 
-    
+
     .social-login {
         align-items: center;
         justify-content: center;
@@ -449,16 +519,16 @@ h1,h2,h3,h4{
         margin: 10px 0;
     }
 
-    .txt-login{
+    .txt-login {
         flex-grow: 1;
         background-color:
             var(--white);
-        border: 
-            none; 
+        border:
+            none;
         height: 1px;
     }
 
-    .txt-login2{
+    .txt-login2 {
         font-size: 17px;
         padding: 5px;
     }
@@ -475,6 +545,7 @@ h1,h2,h3,h4{
         margin: 5px 0;
     }
 }
+
 /* -----------------------------------------Sesion Login------------------------------------ */
 
 
@@ -492,11 +563,10 @@ h1,h2,h3,h4{
         height: 100%;
         backdrop-filter: blur(3px);
         background-color: transparent;
-       
     }
 
     .login-box {
-        
+
         margin: 2% auto;
         background-color: var(--black-background-);
         padding: 35px;
@@ -520,7 +590,7 @@ h1,h2,h3,h4{
         margin-left: 290px;
         margin-bottom: 60px;
     }
-    
+
     .X {
         content: "";
         position: absolute;
@@ -531,7 +601,7 @@ h1,h2,h3,h4{
         background-color: rgb(255, 255, 255);
         transform: translateX(-50%) rotate(45deg);
     }
-    
+
     .Y {
         content: "";
         position: absolute;
@@ -542,7 +612,7 @@ h1,h2,h3,h4{
         background-color: #fff;
         transform: translateX(-50%) rotate(-45deg);
     }
-    
+
     .close {
         position: absolute;
         display: flex;
@@ -562,34 +632,37 @@ h1,h2,h3,h4{
         pointer-events: none;
         opacity: 0;
     }
-    
+
     .button-close:hover {
         background-color: rgb(211, 21, 21);
     }
-    
+
     .button-close:active {
         background-color: rgb(130, 0, 0);
     }
-    
-    .button-close:hover > .close {
+
+    .button-close:hover>.close {
         animation: close 0.2s forwards 0.25s;
     }
-    
+
     @keyframes close {
         100% {
-        opacity: 1;
+            opacity: 1;
         }
     }
 
     .close-tittle {
         display: flex;
         justify-content: center;
-        align-items: center; /* Alinea verticalmente el texto y el botón */
-        position: relative; /* Para que el botón se posicione correctamente */
-        margin-bottom: 20px; /* Espacio entre el título y el resto del formulario */
+        align-items: center;
+        /* Alinea verticalmente el texto y el botón */
+        position: relative;
+        /* Para que el botón se posicione correctamente */
+        margin-bottom: 20px;
+        /* Espacio entre el título y el resto del formulario */
         width: 340px;
     }
-  
+
 
     .login-box2 {
         height: 700px;
@@ -614,7 +687,7 @@ h1,h2,h3,h4{
         width: 100%;
         padding: 8px;
         margin: 10px 0;
-        border-radius: 75px; 
+        border-radius: 75px;
         border: none;
         font-size: 16px;
         color: var(--blackish);
@@ -645,7 +718,7 @@ h1,h2,h3,h4{
         margin: 15px 0;
     }
 
-    
+
     .img-social {
         width: 40px;
         height: 40px;
@@ -662,11 +735,11 @@ h1,h2,h3,h4{
         color: var(--white);
     }
 
-    .date-birthdate{
+    .date-birthdate {
         border-radius: 8px;
     }
 
-/* preloader de la pagina */ 
+    /* preloader de la pagina */
     .loader {
         display: flex;
         align-items: center;
@@ -674,7 +747,7 @@ h1,h2,h3,h4{
         flex-direction: column;
         gap: 5px;
     }
-  
+
     .loading-text {
         color: white;
         font-size: 14pt;
@@ -686,6 +759,7 @@ h1,h2,h3,h4{
         margin-left: 3px;
         animation: blink 1.5s infinite;
     }
+
     .dot:nth-child(2) {
         animation-delay: 0.3s;
     }
@@ -702,7 +776,9 @@ h1,h2,h3,h4{
         padding: 5px;
         width: 200px;
         height: var(--height);
-        background-color: #212121 /*change this*/;
+        background-color: #212121
+            /*change this*/
+        ;
         box-shadow: #0c0c0c -2px 2px 4px 0px inset;
         border-radius: calc(var(--height) / 2);
     }
@@ -717,11 +793,9 @@ h1,h2,h3,h4{
         height: var(--height);
         overflow: hidden;
         background: rgb(222, 74, 15);
-        background: linear-gradient(
-            0deg,
-            rgba(222, 74, 15, 1) 0%,
-            rgba(249, 199, 79, 1) 100%
-        );
+        background: linear-gradient(0deg,
+                rgba(222, 74, 15, 1) 0%,
+                rgba(249, 199, 79, 1) 100%);
         border-radius: calc(var(--height) / 2);
         animation: loading 4s ease-out infinite;
     }
@@ -735,11 +809,9 @@ h1,h2,h3,h4{
 
     .white-bar {
         background: rgb(255, 255, 255);
-        background: linear-gradient(
-            -45deg,
-            rgba(255, 255, 255, 1) 0%,
-            rgba(255, 255, 255, 0) 70%
-    );
+        background: linear-gradient(-45deg,
+                rgba(255, 255, 255, 1) 0%,
+                rgba(255, 255, 255, 0) 70%);
         width: 10px;
         height: 45px;
         opacity: 0.3;
@@ -747,39 +819,44 @@ h1,h2,h3,h4{
     }
 
     @keyframes loading {
-    0% {
-        width: 0;
-    }
-    80% {
-        width: 100%;
-    }
-    100% {
-        width: 100%;
-    }
+        0% {
+            width: 0;
+        }
+
+        80% {
+            width: 100%;
+        }
+
+        100% {
+            width: 100%;
+        }
     }
 
     @keyframes blink {
-    0%,
-    100% {
-        opacity: 0;
-    }
-    50% {
-        opacity: 1;
-    }
+
+        0%,
+        100% {
+            opacity: 0;
+        }
+
+        50% {
+            opacity: 1;
+        }
     }
 
-    .hidden{
+    .hidden {
         overflow: hidden;
     }
 
-    .centrado{
+    .centrado {
         background-color: var(--black-background-);
         height: 100vh;
         display: flex;
         justify-content: center;
         align-items: center;
-    }  
+    }
 }
+
 /* ------------------------Footer------------------------- */
 
 footer {
@@ -865,34 +942,35 @@ footer {
 
 /* ------------------------Screen Juego------------------------- */
 
-.game{
+.game {
     background-color: var(--dark-gray);
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.game-content{
+
+.game-content {
     position: relative;
     width: 100%;
     height: auto;
-    display:flex;
+    display: flex;
     align-items: center;
     justify-content: center;
 
-    .photo-game img{
+    .photo-game img {
         width: 85%;
         height: auto;
         filter: blur(3px);
         border-radius: 8px;
     }
 
-    .photo-game{
+    .photo-game {
         display: flex;
         justify-content: center;
         align-items: center;
     }
 
-    .elements-canva-game{
+    .elements-canva-game {
         position: absolute;
         top: 40%;
         left: 40%;
@@ -901,19 +979,19 @@ footer {
         color: var(--white);
     }
 
-    .btn-play{
-            width: 50%;
-            height: 2.5rem;
-            border-radius: 80px;
-            background-color: var(--primary-color);
-            cursor: pointer;
-            color: var(--white);
-            margin-top: 1rem;
+    .btn-play {
+        width: 50%;
+        height: 2.5rem;
+        border-radius: 80px;
+        background-color: var(--primary-color);
+        cursor: pointer;
+        color: var(--white);
+        margin-top: 1rem;
     }
 
 }
 
-.info-game{
+.info-game {
     background-color: var(--dark-shddow);
     display: flex;
     justify-content: space-between;
@@ -921,27 +999,27 @@ footer {
     align-items: center;
     border-radius: 8px;
     margin-top: 0;
-    color: var(--white);  
+    color: var(--white);
 
-    .logo-pag{
+    .logo-pag {
         margin-top: 0.5rem;
         margin-left: 1rem;
         width: 2.5rem;
         height: 2.5rem;
     }
 
-    .title-game{
+    .title-game {
         text-align: center;
         margin-left: 1rem;
     }
 
-    .feedback{
-        margin-right:1rem;
+    .feedback {
+        margin-right: 1rem;
         display: flex;
         flex-direction: row;
     }
 
-    .btn-feedback{
+    .btn-feedback {
         color: var(--white);
         background-color: var(--dark-shddow);
         border: none;
@@ -952,19 +1030,19 @@ footer {
         cursor: pointer;
     }
 
-    .btn-feedback span{
-        padding:0.3rem;
+    .btn-feedback span {
+        padding: 0.3rem;
     }
 
-    .btn-feedback:hover{
-        background-color:var(--blackish);
+    .btn-feedback:hover {
+        background-color: var(--blackish);
         border-radius: 8px;
         transform: translateY(-2px);
     }
 
 }
 
-.breadcrumb-container{
+.breadcrumb-container {
     align-self: flex-start;
     margin-left: 8%;
     position: relative;
@@ -974,79 +1052,81 @@ footer {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content:start;
+    justify-content: start;
     padding: 10px 0;
     font-size: 14px;
     color: var(--white);
     align-self: flex-start;
-  }
+}
 
-  .breadcrumb a {
+.breadcrumb a {
     text-decoration: none;
-    color: #fff; /* Color de los enlaces */
+    color: #fff;
+    /* Color de los enlaces */
     margin-right: 5px;
     transition: transform 0.2s ease-in-out;
-  }
-  
-  .breadcrumb a:hover {
+}
+
+.breadcrumb a:hover {
     text-decoration: underline;
     transform: translateY(-1px);
 
-  }
-  .screen-game-complete{
+}
+
+.screen-game-complete {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-  .game-info-container{
+.game-info-container {
     background-color: var(--dark-shddow);
-    border-radius:8px;
+    border-radius: 8px;
     margin-top: 25px;
     width: 83%;
     padding: 1rem;
     color: var(--white);
-    
+
 }
 
 
-  .game-info-container ul{
+.game-info-container ul {
     list-style: none;
 }
 
 
-  .game-images-playing{
+.game-images-playing {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     margin-top: 1rem;
 }
 
-  .game-images{
+.game-images {
     margin-top: 1rem;
-  }
-  
-  .img-controls{
+}
+
+.img-controls {
     width: 3.25rem;
     height: auto;
-  }
+}
 
-  .img-controls-move{
+.img-controls-move {
     width: 4.5rem;
-  }
+}
 
-  .game-controls{
+.game-controls {
     display: flex;
     align-items: center;
     margin-top: 0.5rem;
     margin-bottom: 3rem;
-  }
+}
 
-  .game-controls-title{
+.game-controls-title {
     margin-top: 2rem;
-  }
+}
 
-  .games-recommended{
+.games-recommended {
     color: var(--white);
     margin-top: 1rem;
     background-color: var(--dark-shddow);
@@ -1055,14 +1135,14 @@ footer {
     overflow: hidden;
     padding: 0.8rem;
 }
-  .games-recommended-images{
+
+.games-recommended-images {
     display: flex;
     flex-direction: row;
     max-width: 83%;
-  }
+}
 
-  .game-card{
+.game-card {
     margin-right: 0.5rem;
-    margin-left:0.5rem
-  }
-
+    margin-left: 0.5rem
+}
